--- a/webuilder/contact.html
+++ b/webuilder/contact.html
@@ -112,9 +112,9 @@
             <div class="who_we_left_content">
                 <ul style="list-style-type:disc; padding-left: 150px; color: black;">
                     <br>
-                    <li>Mas Systech gives the best engineering career opportunities in the field of Process Engineering, Designing, Drafting, Electrical, Automation, R&D, Sales, Finance and Services.</li>
-                    <li>To fast forward your career, join Mas Systech.</li>
-                    <li>Please send in your resume to <b>hr@massystech.com</b></li>
+                    <li style="font-size: 18px;">Mas Systech gives the best engineering career opportunities in the field of Process Engineering, Designing, Drafting, Electrical, Automation, R&D, Sales, Finance and Services.</li>
+                    <li style="font-size: 18px;">To fast forward your career, join Mas Systech.</li>
+                    <li style="font-size: 18px;">Please send in your resume to <b>hr@massystech.com</b></li>
                 </ul>
                 
             </div>
