--- a/webuilder/news.html
+++ b/webuilder/news.html
@@ -109,9 +109,9 @@
                                 </div>
                             </div>
                             <div class="news_content">
-                                <a><h4>Pack Plus-2018, at Delhi</h4></a>
+                                <a><h4 style="font-size: 25px;">Pack Plus-2018, at Delhi</h4></a>
                                 <h6>Posted By <a href="#">Admin</a></h6>
-                                <p>Pack line was part of the recently concluded Pack Plus-2018, at Delhi. It was a great opportunity to showcase on our secondary packaging automation solution</p>
+                                <p style="font-size: 18px;">Pack line was part of the recently concluded Pack Plus-2018, at Delhi. It was a great opportunity to showcase on our secondary packaging automation solution</p>
                 
                             </div>
                         </div>
@@ -127,9 +127,9 @@
                                 </div>
                             </div>
                             <div class="news_content">
-                                <a><h4>Pack-Ex 2018 </h4></a>
+                                <a><h4 style="font-size: 25px;">Pack-Ex 2018 </h4></a>
                                 <h6>Posted By <a href="#">Admin</a></h6>
-                                <p>Mas Systech is going to participate and show case the products in ‘’Pack Line” series in the upcoming event of Pack-Ex 2018 from 27-29 September, at Bombay exhibition Centre, Mumbai at stall no F-50 Hall 1.</p>
+                                <p style="font-size: 18px;">Mas Systech is going to participate and show case the products in ‘’Pack Line” series in the upcoming event of Pack-Ex 2018 from 27-29 September, at Bombay exhibition Centre, Mumbai at stall no F-50 Hall 1.</p>
                             </div>
                         </div>
                     </div>
@@ -143,9 +143,9 @@
                                 </div>
                             </div>
                             <div class="news_content">
-                                <a><h4>Pacprocess 2018, at Bombay exhibition Centre, Mumbai</h4></a>
+                                <a><h4 style="font-size: 25px;">Pacprocess 2018, at Bombay exhibition Centre, Mumbai</h4></a>
                                 <h6>Posted By <a href="#">Admin</a></h6>
-                                <p>Mas Systech is excited and looking forward for the upcoming show of Pacprocess 2018 from 24-26 October, at Bombay exhibition Centre, Mumbai at stall No: E-12 Hall 1</p>
+                                <p style="font-size: 18px;">Mas Systech is excited and looking forward for the upcoming show of Pacprocess 2018 from 24-26 October, at Bombay exhibition Centre, Mumbai at stall No: E-12 Hall 1</p>
                             </div>
                         </div>
                     </div>
