--- a/webuilder/project-grid-three-column - Copy.html
+++ b/webuilder/project-grid-three-column - Copy.html
@@ -125,11 +125,11 @@
                     <div class="col-md-4 col-sm-6 building isolation interior">
                         <div class="project_item">
                             <img src="img/project/project-grid-three/project-g-three-1.jpg" alt="">
-                            <center> <h4>Mechanical Roboticarm Packer</h4></center>
+                            <center> <h4 style="font-size: 18px;">Mechanical Roboticarm Packer</h4></center>
                             <div class="project_hover">
                                 <div class="project_hover_inner">
                                     <div class="project_hover_content">
-                                        <a><h4>MRP-100<br><br></h4></a>
+                                        <a><h4 style="font-size: 18px;">MRP-100<br><br></h4></a>
                                         <a href="#" class="view_btn" onclick="" id='myBtn1'>View Details</a>
                                         <!-- Modal -->
                                     </div>
@@ -144,7 +144,7 @@
                             <div class="project_hover">
                                 <div class="project_hover_inner">
                                     <div class="project_hover_content">
-                                        <a><h4>PPP-140<br><br></h4></a>
+                                        <a><h4 style="font-size: 18px;">PPP-140<br><br></h4></a>
                                         <a href="#" class="view_btn" onclick="" id='myBtn2'>View Details</a>
                                     </div>
                                 </div>
@@ -158,7 +158,7 @@
                             <div class="project_hover">
                                 <div class="project_hover_inner">
                                     <div class="project_hover_content">
-                                        <a><h4>LD-200<br><br></h4></a>
+                                        <a><h4 style="font-size: 18px;">LD-200<br><br></h4></a>
                                         <a href="#" class="view_btn" onclick="" id='myBtn3'>View Details</a>
                                     </div>
                                 </div>
@@ -172,7 +172,7 @@
                             <div class="project_hover">
                                 <div class="project_hover_inner">
                                     <div class="project_hover_content">
-                                        <a><h4>CEM-111 & 112<br><br></h4></a>
+                                        <a><h4 style="font-size: 18px;">CEM-111 & 112<br><br></h4></a>
                                         <a href="#" class="view_btn" onclick="" id='myBtn4'>View Details</a>
                                     </div>
                                 </div>
@@ -186,7 +186,7 @@
                             <div class="project_hover">
                                 <div class="project_hover_inner">
                                     <div class="project_hover_content">
-                                        <a><h4>SWM-150 + SWT-160<br><br></h4></a>
+                                        <a><h4 style="font-size: 18px;">SWM-150 + SWT-160<br><br></h4></a>
                                         <a href="#" class="view_btn" onclick="" id='myBtn5'>View Details</a>
                                     </div>
                                 </div>
@@ -200,7 +200,7 @@
                             <div class="project_hover">
                                 <div class="project_hover_inner">
                                     <div class="project_hover_content">
-                                        <a><h4>Palletizer<br><br></h4></a>
+                                        <a><h4 style="font-size: 18px;">Palletizer<br><br></h4></a>
                                         <a href="#" class="view_btn" onclick="" id='myBtn6'>View Details</a>
                                     </div>
                                 </div>
@@ -214,7 +214,7 @@
                             <div class="project_hover">
                                 <div class="project_hover_inner">
                                     <div class="project_hover_content">
-                                        <a><h4>CSM-170<br><br></h4></a>
+                                        <a><h4 style="font-size: 18px;">CSM-170<br><br></h4></a>
                                         <a href="#" class="view_btn" onclick="" id='myBtn7'>View Details</a>
                                     </div>
                                 </div>
@@ -228,7 +228,7 @@
                             <div class="project_hover">
                                 <div class="project_hover_inner">
                                     <div class="project_hover_content">
-                                        <a><h4>ETM-120<br><br></h4></a>
+                                        <a><h4 style="font-size: 18px;">ETM-120<br><br></h4></a>
                                         <a href="#" class="view_btn" onclick="" id='myBtn8'>View Details</a>
                                     </div>
                                 </div>
@@ -296,9 +296,9 @@
                 <div class="modal-body">
                     <div class="container"> 
                     <h2 style="color: #d6251c">Mechanical Roboticarm Packer: Model MRP-100<br><br></h2>
-                    <p>Our Robotic arm case packer system bring unravelled and is undoubtedly the answer to your robotic case packing needs.</p>
-                    <p>Pack line series offers the robotic arm top load case packer which is a good alternate to your manual packing operation,<br> which provide a high performance case packing solutions. Our case packers is a robust machine which guarantees with top most operational efficiencies.<br><br></p>
-                    <table class="table table-inverse">
+                    <p style="font-size: 18px;">Our Robotic arm case packer system bring unravelled and is undoubtedly the answer to your robotic case packing needs.</p>
+                    <p style="font-size: 18px;">Pack line series offers the robotic arm top load case packer which is a good alternate to your manual packing operation,<br> which provide a high performance case packing solutions. Our case packers is a robust machine which guarantees <br>with top most operational efficiencies.<br><br></p>
+                    <table class="table table-inverse" style="font-size: 18px;">
                           <thead>
                             <tr>
                               <!--<th>First Name  <img src="img/project/project-grid-three/project-g-three-1.jpg" class="img-responsive" alt="" width="30%"> </th>-->
@@ -368,9 +368,9 @@
                 <div class="modal-body">
                     <div class="container"> 
                     <h2 style="color: #d6251c">Pick And Place Packer: Model PPP-140<br><br></h2>
-                    <p>A simple yet rigid pick & Place case packer with robust structure, this system is an economically efficient packaging system mainly for the glass bottle packaging.</p>
-                    <p>This is a two axis servo controlled vacuum gripper with intermitted servo system. It can be quickly changeover for different product and it can be integrated for <br> packing different packing lines. With a small foot print, this pack line series pick & Placer is an economical and reliable case packer. <br><br></p>
-                    <table class="table table-inverse">
+                    <p style="font-size: 18px;">A simple yet rigid pick & Place case packer with robust structure, this system is an economically efficient packaging system <br>mainly for the glass bottle packaging.</p>
+                    <p style="font-size: 18px;">This is a two axis servo controlled vacuum gripper with intermitted servo system. It can be quickly changeover for different <br>product and it can be integrated for packing different packing lines. With a small foot print, this pack line series pick & Placer <br>is an economical and reliable case packer. <br><br></p>
+                    <table class="table table-inverse" style="font-size: 18px;">
                           <thead>
                             <tr>
                               <!--<th>First Name  <img src="img/project/project-grid-three/project-g-three-1.jpg" class="img-responsive" alt="" width="30%"> </th>-->
@@ -443,9 +443,9 @@
                 <div class="modal-body">
                     <div class="container"> 
                     <h2 style="color: #d6251c">Lane Divider: Model LD-200<br><br></h2>
-                    <p>Our Pack line series High speed Lane divider has been built is a state-of-the-art servo drive technology which can sorter 1-8 lanes,</p>
-                    <p>Mainly use for beverage and food sector comprises of cans, pet and glass bottles.<br>This lane divider will be a perfect infeed system for Pack line series case packers.<br><br></p>
-                    <table class="table table-inverse">
+                    <p style="font-size: 18px;">Our Pack line series High speed Lane divider has been built is a state-of-the-art servo drive technology which <br>can sorter 1-8 lanes.</p>
+                    <p style="font-size: 18px;">Mainly use for beverage and food sector comprises of cans, pet and glass bottles.<br>This lane divider will be a perfect infeed system for Pack line series case packers.<br><br></p>
+                    <table class="table table-inverse" style="font-size: 18px;">
                           <thead>
                             <tr>
                               <!--<th>First Name  <img src="img/project/project-grid-three/project-g-three-1.jpg" class="img-responsive" alt="" width="30%"> </th>-->
@@ -506,9 +506,9 @@
                 <div class="modal-body">
                     <div class="container"> 
                     <h2 style="color: #d6251c">High Speed Case Erector: Model CEM-111 & CEM-112<br><br></h2>
-                    <p>One of the best and reliable product comes from our pack line series is our Case Erector machine that runs reliably at the stipulated speed <br>in two different models. It is one of the easy to operate and maintainable machine. It is an ideal solution for cost cutting in terms of manpower.</p>
-                    <p>This affordable case erector is packed with all versatility and feature required to meet the applications. <br>The high quality construction and reliability features of our Pack Line series case erector facilitate all the same benefits as those gained with more expensive models.<br><br></p>
-                    <table class="table table-inverse">
+                    <p style="font-size: 18px;">One of the best and reliable product comes from our pack line series is our Case Erector machine that runs reliably at <br>the stipulated speed in two different models. It is one of the easy to operate and maintainable machine. It is an ideal solution <br>for cost cutting in terms of manpower.</p>
+                    <p style="font-size: 18px;">This affordable case erector is packed with all versatility and feature required to meet the applications. <br>The high quality construction and reliability features of our Pack Line series case erector facilitate all the same benefits <br>as those gained with more expensive models.<br><br></p>
+                    <table class="table table-inverse" style="font-size: 18px;">
                           <thead>
                             <tr>
                               <!--<th>First Name  <img src="img/project/project-grid-three/project-g-three-1.jpg" class="img-responsive" alt="" width="30%"> </th>-->
@@ -580,9 +580,9 @@
                 <div class="modal-body">
                     <div class="container"> 
                     <h2 style="color: #d6251c">Shrink Wrappin Machine & Tunnel: Model SWM-150 + SWT-160<br><br></h2>
-                    <p>Our Pack line series shrink wrapping machine comes with automatic feeding, pushing, film feeding and sealing. The time efficiency is at its best<br>with wide variety of product like glass bottles, cans, jars, and pet bottles which can be effectively wrapped.</p>
-                    <p>Our heat shrink wrapping tunnel is a high quality construction ensures product shrink wrapping quality is Imperative.<br><br><br></p>
-                    <table class="table table-inverse">
+                    <p style="font-size: 18px;">Our Pack line series shrink wrapping machine comes with automatic feeding, pushing, film feeding and sealing. <br>The time efficiency is at its best with wide variety of product like glass bottles, cans, jars, and pet bottles <br>which can be effectively wrapped.</p>
+                    <p style="font-size: 18px;">Our heat shrink wrapping tunnel is a high quality construction ensures product shrink wrapping quality is Imperative.<br><br><br></p>
+                    <table class="table table-inverse" style="font-size: 18px;">
                           <thead>
                             <tr>
                               <!--<th>First Name  <img src="img/project/project-grid-three/project-g-three-1.jpg" class="img-responsive" alt="" width="30%"> </th>-->
@@ -659,9 +659,9 @@
                 <div class="modal-body">
                     <div class="container"> 
                     <h2 style="color: #d6251c">Palletizer<br><br></h2>
-                    <p>Our robotic palletizer are made with specialized features with quality, efficiency and effective palletizing process. <br>Pack line has recognized by Yaskawa as unique expertise in applying robotic palletizing system. <br>Single line system with single feeding lane/single lane discharge and also with multilane system.</p>
-                    <p>With greater precision and consistency, minimizing and reducing product loss to due to damage and also removal of human interactions<br> and reducing work place injuries, makes this system a unique solution for your warehouse needs.<br><br></p>
-                    <table class="table table-inverse">
+                    <p style="font-size: 18px;">Our robotic palletizer are made with specialized features with quality, efficiency and effective palletizing process. <br>Pack line has recognized by Yaskawa as unique expertise in applying robotic palletizing system. <br>Single line system with single feeding lane/single lane discharge and also with multilane system.</p>
+                    <p style="font-size: 18px;">With greater precision and consistency, minimizing and reducing product loss to due to damage and also removal of human interactions and reducing work place injuries, makes this system a unique solution for your warehouse needs.<br><br></p>
+                    <table class="table table-inverse" style="font-size: 18px;">
                           <thead>
                             <tr>
                               <!--<th>First Name  <img src="img/project/project-grid-three/project-g-three-1.jpg" class="img-responsive" alt="" width="30%"> </th>-->
@@ -734,8 +734,8 @@
                 <div class="modal-body">
                     <div class="container"> 
                     <h2 style="color: #d6251c">Case Sealer Machine: Model CSM-170<br><br></h2>
-                    <p>Our case sealer machine model CS-170 is a semi-automatic, belt driven top and bottom sealer, which can handle a wide range of case sizes <br>with quick changeover and reducing labour. Its flawless performance makes the final process much quicker and easier.<br><br></p>
-                    <table class="table table-inverse">
+                    <p style="font-size: 18px;">Our case sealer machine model CS-170 is a semi-automatic, belt driven top and bottom sealer, which can handle <br>a wide range of case sizes with quick changeover and reducing labour. <br>Its flawless performance makes the final process much quicker and easier.<br><br></p>
+                    <table class="table table-inverse" style="font-size: 18px;">
                           <thead>
                             <tr>
                               <!--<th>First Name  <img src="img/project/project-grid-three/project-g-three-1.jpg" class="img-responsive" alt="" width="30%"> </th>-->
@@ -804,8 +804,8 @@
                 <div class="modal-body">
                     <div class="container"> 
                     <h2 style="color: #d6251c">Edge Tapping Machine: Model ETM-120<br><br></h2>
-                    <p>Our pack line series Edge taping machine is durable and low maintenance machine. This is a semi-automatic corner sealer for four sides <br>ensures and eliminates dust or foreign particles and is suitable for pharma and food industries. <br>It is manually adjustable for different sizes of cartons.<br><br></p>
-                    <table class="table table-inverse">
+                    <p style="font-size: 18px;">Our pack line series Edge taping machine is durable and low maintenance machine. This is a semi-automatic corner sealer <br>for four sides ensures and eliminates dust or foreign particles and is suitable for pharma and food industries. <br>It is manually adjustable for different sizes of cartons.<br><br></p>
+                    <table class="table table-inverse" style="font-size: 18px;">
                           <thead>
                             <tr>
                               <!--<th>First Name  <img src="img/project/project-grid-three/project-g-three-1.jpg" class="img-responsive" alt="" width="30%"> </th>-->
