--- a/webuilder/index.html
+++ b/webuilder/index.html
@@ -33,20 +33,21 @@
     <body >   
         <!--================Header Area =================-->
         <header class="main_header_area">
-            <div class="header_top_area" >
+            <div class="header_top_area">
                 <div class="container">
-                    <div class="pull-left">
-                        <a><i class="fa fa-phone"></i>(020) - 6630 9584</a>
+                    <div class="pull-left" style="height: 5px;">
+                        <a><br></a>
+                        <!--<a><i class="fa fa-phone"></i>(020) - 6630 9584</a>
                         <a><i class="fa fa-map-marker"></i>Chikhali, Pune 411062</a>
-                        <a href="/img/Pack Line Mas Systech Brochure.pdf" download="Pack Line Mas Systech Catalogue"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>Download Catalogue</a>
+                        <a href="/img/Pack Line Mas Systech Brochure.pdf" download="Pack Line Mas Systech Catalogue"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>Download Catalogue</a>-->
                         <!--<a><i class="mdi mdi-clock"></i>08 AM - 10 PM</a>-->
                     </div>
-                    <div class="pull-right">
+                    <div class="pull-right" style="height: 5px;">
                         <ul class="header_social">
-                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                            <!--<li><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                            <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+                            <li><a href="#"><i class="fa fa-pinterest"></i></a></li>-->
                         </ul>
                     </div>
                 </div>
