fit the images width wise on index and host on io

--- a/webuilder/project-grid-three-column - Copy.html
+++ b/webuilder/project-grid-three-column - Copy.html
@@ -195,13 +195,8 @@
                     </div>
                     <div class="col-md-4 col-sm-6 building isolation tiling design plumbing">
                         <div class="project_item">
-<<<<<<< HEAD
                             <img src="img/project/project-grid-three/project-g-three-13.jpg" alt="">
                             <center> <h4>Special Conveyors and Automation</h4></center>
-=======
-                            <img src="img/project/project-grid-three/project-g-three-6.jpg" alt="" class="img-responsive">
-                            <center> <h4>Palletizer</h4></center>
->>>>>>> a5b3472316843617d91c7831d4807b56f8cc2fab
                             <div class="project_hover">
                                 <div class="project_hover_inner">
                                     <div class="project_hover_content">
@@ -242,13 +237,8 @@
                     </div>
                     <div class="col-md-4 col-sm-6 isolation tiling interior plumbing">
                         <div class="project_item">
-<<<<<<< HEAD
                             <img src="img/project/project-grid-three/project-g-three-6.jpg" alt="">
                             <center> <h4>Palletizer</h4></center>
-=======
-                            <img src="img/project/project-grid-three/project-g-three-13.jpg" alt="" class="img-responsive">
-                            <center> <h4>Special Conveyors and Automation</h4></center>
->>>>>>> a5b3472316843617d91c7831d4807b56f8cc2fab
                             <div class="project_hover">
                                 <div class="project_hover_inner">
                                     <div class="project_hover_content">
@@ -290,7 +280,7 @@
                           <span class="glyphicon glyphicon-menu-left" ></span>  
                         </button>
                              </div> <div class="col-xs-9"> 
-                        <a href="https://www.youtube.com/watch?v=o0W6faEmaHI" target="_blank"><img src="img/project/project-grid-three/project-g-three-1.jpg" alt="" class="img-responsive" class="img-responsive"></a>
+                        <a href="https://www.youtube.com/watch?v=2ijwiV5-GqU" target="_blank"><img src="img/project/project-grid-three/project-g-three-1.jpg" alt="" class="img-responsive" class="img-responsive"></a>
                              </div> <div class="col-xs-1">   
                         <button type="button" class="btn btn-default btn-sm" id="right2">
                           <span class="glyphicon glyphicon-menu-right"></span>  
@@ -543,7 +533,7 @@
                           <span class="glyphicon glyphicon-menu-left" ></span>  
                         </button>
                              </div>    <div class="col-xs-9"> 
-                        <a href="https://www.youtube.com/watch?v=G7XE8tPZecQ" target="_blank"><img src="img/project/project-grid-three/project-g-three-4.jpg" alt="" class="img-responsive"></a>
+                        <a href="https://www.youtube.com/watch?v=cRAXLl5_mhM" target="_blank"><img src="img/project/project-grid-three/project-g-three-4.jpg" alt="" class="img-responsive"></a>
                              </div>    <div class="col-xs-1"> 
                         <button type="button" class="btn btn-default btn-sm" id="right5">
                           <span class="glyphicon glyphicon-menu-right"></span>  
